@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2004/10/03 00:13:00 tv Exp $
+# $NetBSD: Makefile,v 1.16 2004/10/04 09:22:22 minskim Exp $
 #
 
-DISTNAME=	xchm-0.9.3
-PKGREVISION=	1
+DISTNAME=	xchm-0.9.5
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=xchm/}
 
