@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7335 2004/10/04 09:12:15 grant Exp $
+$NetBSD: CHANGES,v 1.7336 2004/10/04 09:22:21 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4537,3 +4537,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated tcl to 8.4.7nb2 [minskim 2004-10-04]
 	Updated firefox to 0.10.1 [grant 2004-10-04]
 	Updated firefox-gtk2 to 0.10.1 [grant 2004-10-04]
+	Updated xchm to 0.9.5 [minskim 2004-10-04]
